# wghttp

./: .clang-format  .clang-tidy  .commitlintrc.yml  .gitignore  .releaserc  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-on-tag.yml  pr-checks.yml  release.yml  tag.yml  tests-on-pr.yml  tests.yml
basis/: Cargo.toml
basis/src/if_mng/: mod.rs
core/src/: lib.rs
core/src/if_mng/: mod.rs
core/src/wg_mng/: mod.rs
domain/src/: adapters.rs  lib.rs  models.rs
if_mng_libc/: Cargo.toml
if_mng_libc/src/: lib.rs  tests.rs
netdev/: Cargo.toml  build.rs
netdev/src/: ffi.rs  lib.rs  tests.rs
netdev/src/libnetdev/: libnetdev.c  libnetdev.h
wg_mng_cbind/: Cargo.toml  build.rs
wg_mng_cbind/src/: bindings.rs  lib.rs  tests.rs
wghttp/: Cargo.toml
wghttp/src/: helpers.rs  lib.rs  main.rs
wghttp/src/api/: handlers.rs  mod.rs  models.rs  tests.rs
wghttp/src/models/: devices.rs  errors.rs  mod.rs  peers.rs
wghttp/src/routes/: devices.rs  health.rs  mod.rs  peers.rs
wghttp/src/services/: mod.rs
wghttp/tests/: devices.rs  health.rs  peers.rs
wghttp/tests/mock/: mod.rs
wgshim/: Cargo.toml  build.rs
wgshim/src/: ffi.rs  lib.rs  tests.rs
wgshim/src/libwgshim/: libwgshim.c  libwgshim.h
