[package]
name = "wghttp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basis = { path = "../basis" }
if_mng_libc = { path = "../if_mng_libc" }
wg_mng_cbind = { path = "../wg_mng_cbind" }
utoipa = "3"
tokio = { version = "1" , features = ["full"]}
tokio-stream = { version = "0.1", features = ["net"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
ipnet = "2.7"
argh = "0.1"
