[package]
name = "wghttp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
domain = { path = "../domain"}
wgshim = { path = "../wgshim" }
netdev = { path = "../netdev" }

[dev-dependencies]
actix-web = "4"
domain = { path = "../domain"}
